fixed partner slide multiple rows on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,3 +144,7 @@
 .slick-track .slick-slide div {
   display: flex;
 } */
+
+.slick-track {
+  display: flex !important;
+}
